--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,85 @@
 env/
 .env
+
+# ===================================
+# 🔥 React (Frontend) ignores
+# ===================================
+
+# Node modules
+**/node_modules/
+**/.env.local
+**/.env.development.local
+**/.env.test.local
+**/.env.production.local
+
+# Build outputs
+**/build/
+**/dist/
+**/.next/
+**/.turbo/
+**/.cache/
+**/coverage/
+**/.vite/
+**/.eslintcache
+
+# IDE files
+**/.vscode/
+**/.idea/
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Log files
+*.log
+
+# ===================================
+# 🐍 Django (Backend) ignores
+# ===================================
+
+# Python bytecode
+*.pyc
+*.pyo
+*.pyd
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Virtual environment
+venv/
+env/
+ENV/
+.venv/
+.pip/
+.Python
+
+# Django-specific
+*.sqlite3
+*.log
+db.sqlite3
+media/
+staticfiles/
+static_root/
+*.pot
+
+# Secrets
+*.env
+.env.*
+
+# Pytest
+htmlcov/
+.coverage
+.tox/
+nosetests.xml
+coverage.xml
+*.cover
+.pytest_cache/
+
+# Migrations (optional to ignore)
+# You can comment out this line if you want to track them
+**/migrations/
+
+# ===================================
+# Git
+# ===================================
+.git/
